# prefect-cert-course

./: .python-version  LICENSE  README.md  pyproject.toml
.prefect/: flows.json
flows/: demo.py  flowtest.py  weather.py
