[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.mypy]
python_version = "3.11.2"
mypy_path = "_typeshed"

[tool.poetry]
name = "prefect-cert-course"
version = "0.0.1"
description = "Prefect certification course demonstration project"
authors = ["Mars Williams <mars@joinmodernhealth.com>"]

[tool.poetry.dependencies]
python = "3.11.2"
prefect = "^2.10.5"
httpx = "^0.24.0"
requests = "^2.28.2"
pandas = "^2.0.1"
jupyterlab = "^3.6.3"
jupyter = "^1.0.0"


[tool.poetry.dev-dependencies]
autoflake = "^1"
black = "22.6.0"
Faker = "^8"
flake8 = "5.0.3"
ipython = "^7"
isort = "5.7.0"
mypy = "0.971"
pytest = "^6"
pytest-cov = "^2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry-core>=1.0.0"]
